fix: resolve layout shift caused by loader

--- a/app/globals.css
+++ b/app/globals.css
@@ -175,9 +175,12 @@
 
 @layer base {
   * {
-    @apply border-border outline-ring/50 overflow-x-hidden;
+    @apply border-border outline-ring/50;
+  }
+  html {
+    @apply overflow-x-hidden;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply bg-background text-foreground  overflow-x-hidden;
   }
 }
